--- a/hello-world-docker-action/action.yml
+++ b/hello-world-docker-action/action.yml
@@ -1,19 +1,35 @@
-name: 'Hello World Docker Action!'
-description: 'Greet someone and record the time'
-
+name: 'Hello World Docker Action'
+description: 'Say hello to a user or the world.'
 inputs:
   who-to-greet:
     description: 'Who to greet'
     required: true
     default: 'world'
-
 outputs:
   time:
-    description: 'The time we greeted you'
-
+    description: 'The time we said hello.'
 runs:
   using: 'docker'
   image: 'Dockerfile'
-  env:
-    INPUT_WHO_TO_GREET: ${{ inputs.who-to-greet }}
+  args:
+    - ${{ inputs.who-to-greet }}
+
+#name: 'Hello World Docker Action!'
+#description: 'Greet someone and record the time'
+#
+#inputs:
+#  who-to-greet:
+#    description: 'Who to greet'
+#    required: true
+#    default: 'world'
+#
+#outputs:
+#  time:
+#    description: 'The time we greeted you'
+#
+#runs:
+#  using: 'docker'
+#  image: 'Dockerfile'
+#  env:
+#    INPUT_WHO_TO_GREET: ${{ inputs.who-to-greet }}
     
